# idolmap

./: Cargo.toml  Dockerfile  README.md  idolmap-update.sh
src/: aikatsu.rs  csv.rs  lib.rs  lovelive.rs  main.rs  prichan.rs  pripara.rs
