[package]
name = "idolmap"
version = "0.1.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]

[dependencies]
clap = "2.26"
env_logger = "0.4"
futures = "0.1"
hyper = "0.11"
kuchiki = "0.5"
log = "0.3"
selectors = "0.18"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
url = "1.5"
