[package]
name = "idolmap"
version = "0.2.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.31"
csv = "1.0.0-beta.5"
env_logger = "0.6"
reqwest = "0.9"
kuchiki = "0.7"
log = "0.4"
selectors = "0.20"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7"
